add annotation in ApiResponse, refactore pattern in SecurityConfig for csrf ingnor, add annotation table for UserEntity